<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenMarketOrderActivity">

    <EditText
        android:id="@+id/component_id_field"
        style="@style/NotEditable"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/component_id_textview"
        android:ems="10" />

    <EditText
        android:id="@+id/client_name_field"
        style="@style/NotEditable"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_name_field"
        android:ems="10" />

    <EditText
        android:id="@+id/order_date_field"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/order_date_textview"
        android:ems="10"
        style="@style/NotEditable"/>

    <TextView
        android:id="@+id/component_id_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/order_id_textview" />

    <TextView
        android:id="@+id/product_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/component_id_field"
        android:text="@string/client_name_textview" />

    <TextView
        android:id="@+id/order_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/client_name_field"
        android:text="@string/order_date_textview" />

    <TextView
        android:id="@+id/product_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/order_date_field"
        android:text="@string/product_name_quantity_textview" />

    <ListView
        android:id="@+id/product_names_listview"
        android:layout_width="317dp"
        android:layout_height="240dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_name_textview" />

    <Button
        android:id="@+id/delete_market_order_button"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_order"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/loadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/is_packed_checkbox"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_names_listview"
        android:checked="false"
        android:text="@string/ready_to_ship"
        style="@style/NotEditable"/>

    <CheckBox
        android:id="@+id/is_shipped_checkbox"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/is_packed_checkbox"
        android:text="@string/shipped" />

</RelativeLayout>