<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/tabs_layout">

        <Button
            android:id="@+id/market_button"
            style="@android:style/Widget.Material.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/market_button"
            android:visibility="visible" />

        <Button
            android:id="@+id/manufacture_button"
            style="@android:style/Widget.Material.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/manufacture_button"
            android:visibility="visible" />
    </LinearLayout>


    <ListView
        android:id="@+id/products_list"
        android:layout_width="match_parent"
        android:layout_height="423dp"
        android:layout_above="@+id/open_cart_button"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/product_name_textview" />

    <TextView
        android:id="@+id/product_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/my_toolbar"
        android:text="@string/product_name_textview" />

    <TextView
        android:id="@+id/quantity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/products_list"
        android:text="@string/quantity_textview" />

    <Button
        android:id="@+id/open_cart_button"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tabs_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/go_to_cart" />

    <ProgressBar
        android:id="@+id/loadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

</RelativeLayout>