<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComponentListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ListView
        android:id="@+id/component_list"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_alignParentStart="true"
        android:layout_above="@id/order_component_button"
        android:layout_below="@id/component_name_textview"/>

    <Button
        android:id="@+id/order_component_button"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/order_component"
        android:visibility="visible" />


    <TextView
        android:id="@+id/component_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentStart="true"
        android:text="@string/component_name_textview" />

    <TextView
        android:id="@+id/quantity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/component_list"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="52dp"
        android:text="@string/quantity_textview" />

    <ProgressBar
        android:id="@+id/loadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/units_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/component_list"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:text="@string/units" />
</RelativeLayout>